[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/click_reminder.gd" type="Script" id=1]
[ext_resource path="res://scripts/start_screen.gd" type="Script" id=2]
[ext_resource path="res://fonts/title-font.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/subtitle-font.tres" type="DynamicFont" id=4]

[node name="start_screen" type="Container"]
visible = false
margin_right = 128.0
margin_bottom = 128.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="intro_finished" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="tic" type="Label" parent="."]
margin_top = 35.0
margin_right = 128.0
margin_bottom = 52.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tic"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tic_tween" type="Tween" parent="."]

[node name="tic_timer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true
autostart = true

[node name="tac" type="Label" parent="."]
margin_top = 55.0
margin_right = 128.0
margin_bottom = 72.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tac"
align = 1
valign = 1

[node name="tac_tween" type="Tween" parent="."]

[node name="tac_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="tree" type="Label" parent="."]
margin_top = 75.0
margin_right = 128.0
margin_bottom = 92.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tree"
align = 1
valign = 1

[node name="tree_timer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true
autostart = true

[node name="tree_tween" type="Tween" parent="."]

[node name="click_reminder" type="Label" parent="."]
visible = false
margin_top = 123.0
margin_right = 128.0
margin_bottom = 127.0
custom_fonts/font = ExtResource( 4 )
text = "Click to continue"
align = 1
uppercase = true
script = ExtResource( 1 )

[node name="pulse_timer" type="Timer" parent="click_reminder"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="start_timer" type="Timer" parent="click_reminder"]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="click_reminder"]
[connection signal="gui_input" from="." to="." method="_on_start_screen_gui_input"]
[connection signal="timeout" from="intro_finished" to="." method="_on_intro_finished_timeout"]
[connection signal="timeout" from="tic_timer" to="." method="_on_tic_timer_timeout"]
[connection signal="timeout" from="tac_timer" to="." method="_on_tac_timer_timeout"]
[connection signal="timeout" from="tree_timer" to="." method="_on_tree_timer_timeout"]
[connection signal="timeout" from="click_reminder/pulse_timer" to="click_reminder" method="_on_pulse_timer_timeout"]
[connection signal="timeout" from="click_reminder/start_timer" to="click_reminder" method="_on_start_timer_timeout"]
